tests/NormalTests/paczka1/fuzzy1/29112454.err
Error in line 2: DnZy2Raz A423 60,5
Error in line 7: A860 S493 51,4
Error in line 14: A860 A413 60,6
Error in line 11: So8jOOh A860 30,9
Error in line 8: bfARPfvtL A860 6,6
Error in line 20: BKyrh26zp A413 27,1
Error in line 17: So8jOOh A413 30,2
Error in line 26: hSq A423 60,6
Error in line 25: So8jOOh S493 85,9
Error in line 27: hSq A413 95,8
Error in line 33: hSq A423 25,7
